fix(badge-given): #MBA-107 fix filter elements alignment

--- a/scss/specifics/minibadge/components/_periode-picker.scss
+++ b/scss/specifics/minibadge/components/_periode-picker.scss
@@ -1,7 +1,6 @@
 .periode-picker {
   &-container {
     position: relative;
-    float: left;
     display: flex;
     align-items: center;
     column-gap: 10px;
@@ -15,7 +14,7 @@
     font-size: 16px;
     font-family: Roboto;
     color: $minibadge-grey-dark;
-    border: none;
+    border: solid #ebebeb 2px;
     border-radius: 3px;
     @include mobile {
       width: 128px;
